--- a/rajapache/templates/default/httpd.conf.erb
+++ b/rajapache/templates/default/httpd.conf.erb
@@ -1,4 +1,4 @@
-#
+# This file is edited by <%= node['author'] %>
 # This is the main Apache server configuration file.  It contains the
 # configuration directives that give the server its instructions.
 # See <URL:http://httpd.apache.org/docs/2.2/> for detailed information.
